sas-bases/components/security/network/networking.k8s.io/ingress/nginx.ingress.kubernetes.io/front-door-tls/sas-analytics-resources-transformers.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-analytics-components-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-analytics-components
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-analytics-data-segmentation-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-analytics-data-segmentation
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-analytics-flows-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-analytics-flows
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-analytics-localization-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-analytics-localization
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-v1-ingress-sas-analytics-validation-front-door-tls-transformer
patch: |-
  - op: add
    path: /metadata/annotations/sas.com~1tls-mode
    value: front-door
  - op: add
    path: /spec/tls
    value: [{hosts: [$(INGRESS_HOST), '*.$(INGRESS_HOST)'], secretName: sas-ingress-certificate}]
target:
  version: v1
  kind: Ingress
  name: sas-analytics-validation
